kubernetes/monitoring/prometheus/alertmanager/alertmanager.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: alertmanager
  template:
    metadata:
      labels:
        task: monitoring
        k8s-app: alertmanager
    spec:
      # Essential
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: la1r.workload/essential
                operator: In
                values:
                - "true"

      containers:
      - name: alertmanager
        ports:
        - containerPort: 9093
        image: prom/alertmanager
        resources:
          requests:
            cpu: 10m
            memory: 56Mi
          limits:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        # - name: alertmanager
        #   mountPath: /alertmanager
        - name: alertmanager-config
          mountPath: /etc/alertmanager/alertmanager.yml
          subPath: alertmanager.yml
        - mountPath: /alertmanager
          name: alertmanager-volume
      volumes:
      # - name: alertmanager
      #   persistentVolumeClaim:
      #     claimName: alertmanager-claim
      - name: alertmanager-config
        configMap:
          name: alertmanager-config
          items:
          - key: alertmanager.yml
            path: alertmanager.yml
          defaultMode: 0744
      - name: alertmanager-volume
        persistentVolumeClaim:
          claimName: alertmanager-data-claim
---
apiVersion: v1
kind: Service
metadata:
  labels:
    task: monitoring
  name: alertmanager-service
  namespace: monitoring
spec:
  ports:
  - name: alsohttp
    port: 9093
    targetPort: 9093
  - name: http
    port: 80
    targetPort: 9093
  selector:
    k8s-app: alertmanager

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: alertmanager-loadbalancer-service
#   namespace: monitoring
# spec:
#   loadBalancerIP: 192.168.6.66
#   type: LoadBalancer
#   ports:
#     - name: http
#       protocol: TCP
#       port: 80
#       targetPort: 9093
#     - name: alsohttp
#       port: 9093
#       targetPort: 9093
#   selector:
#     k8s-app: alertmanager

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-https
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  tls:
  - secretName: alertmanager-bas-tls
  rules:
  - host: alerts.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alertmanager-service
            port:
              number: 80

# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: alertmanager-http
#   namespace: monitoring
#   annotations:
#     traefik.ingress.kubernetes.io/router.tls: "false"
#     traefik.ingress.kubernetes.io/router.entrypoints: "web"
#     traefik.ingress.kubernetes.io/router.middlewares: "traefik-http-redirect-to-https@kubernetescrd"
# spec:
#   rules:
#   - host: alerts.bas
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: alertmanager-service
#             port:
#               number: 80
